--- a/core/templates/blocks/facebook.html
+++ b/core/templates/blocks/facebook.html
@@ -1,3 +1,14 @@
-<a href="https://www.facebook.com/dialog/oauth?
-    client_id=ENTER_YOU_CLIENT_ID_HERE
-   &redirect_uri=http://localhost:8000/facebookreturn&scope=email,user_birthday">FACEBOOK LOGIN BUTTON </a>
+ {% if error %}
+      {% if error == 'AUTH_FAILED' %}
+          <p>Authentication failed</p>
+      {% else %}{% if error == 'AUTH_DISABLED' %}
+          <p>Your account is disabled</p>
+      {% else %}{% if error == 'AUTH_DENIED' %}
+          <p>You did not allow access</p>
+       {% endif %}{% endif %}{% endif %}
+  {% else %}
+    {{ settings.FACEBOOK_APP_ID }}
+    <a href="https://graph.facebook.com/oauth/authorize?client_id={{ settings.FACEBOOK_APP_ID }}&redirect_uri={{ settings.FACEBOOK_REDIRECT_URI }}&scope=publish_stream,email&display=popup">
+      <img src="http://developers.facebook.com/images/devsite/login-button.png"/>
+    </a>
+  {% endif %}
