--- a/core/templates/blocks/facebook.html
+++ b/core/templates/blocks/facebook.html
@@ -1,14 +1,26 @@
- {% if error %}
-      {% if error == 'AUTH_FAILED' %}
-          <p>Authentication failed</p>
-      {% else %}{% if error == 'AUTH_DISABLED' %}
-          <p>Your account is disabled</p>
-      {% else %}{% if error == 'AUTH_DENIED' %}
-          <p>You did not allow access</p>
-       {% endif %}{% endif %}{% endif %}
-  {% else %}
-    {{ settings.FACEBOOK_APP_ID }}
-    <a href="https://graph.facebook.com/oauth/authorize?client_id={{ settings.FACEBOOK_APP_ID }}&redirect_uri={{ settings.FACEBOOK_REDIRECT_URI }}&scope=publish_stream,email&display=popup">
-      <img src="http://developers.facebook.com/images/devsite/login-button.png"/>
+{% extends 'index.html' %}
+
+{% block content %}
+{% if error %}
+          {% if error == 'AUTH_FAILED' %}
+              <p>Authentication failed</p>
+          {% else %}{% if error == 'AUTH_DISABLED' %}
+              <p>Your account is disabled</p>
+          {% else %}{% if error == 'AUTH_DENIED' %}
+              <p>You did not allow access</p>
+           {% endif %}{% endif %}{% endif %}
+        {% else %}
+
+
+    <a href="https://graph.facebook.com/oauth/authorize?client_id={{ settings.FACEBOOK_APP_ID }}&redirect_uri={{ settings.FACEBOOK_REDIRECT_URI }}&scope=email,publish_actions,user_about_me,user_birthday,user_friends,user_location&display=popup">
+    Login
     </a>
-  {% endif %}
+        <p>Hello {{ request.user.name }}!</p>
+
+
+{% endif %}
+
+
+
+{% endblock %}
+
