--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,5 +1,7 @@
-<html>
-	<body>
-		 it works.
-	</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+  <h2>Homepage</h2>
+  <p>Hello {{ request.user.name }}!</p>
+      <p>Hello {{ user.name }}!</p>
+{% endblock %}
