--- a/core/templates/wanna_help.html
+++ b/core/templates/wanna_help.html
@@ -30,7 +30,7 @@
 <div class="form-group">
   <label for="name" class="control-label col-sm-2">Shelter Name</label>
   <div class="col-sm-10">
-    <input type="text" class="form-control" id="name" placeholder="Should be small" required="">
+    <input type="text" class="form-control" id="name" name="name" placeholder="Should be small" required="">
     
   </div>
 </div>
@@ -38,7 +38,7 @@
 <div class="form-group">
   <label for="address" class="control-label col-sm-2">Address</label>
   <div class="col-sm-10">
-    <input type="text" class="form-control" id="address" placeholder="Please provide address in correct format" required="">
+    <input type="text" class="form-control" id="address" name="address" placeholder="Please provide address in correct format" required="">
     
   </div>
 </div>
@@ -47,7 +47,7 @@
   <label for="capacity" class="control-label col-sm-2">Capacity</label>
   <div class="col-sm-2">
     <div class="spinbox" data-initialize="spinbox" id="capacity">
-      <input id="capacityInput" type="text" class="form-control input-mini spinbox-input" value="1">
+      <input id="capacityInput" type="text" name="capacity" class="form-control input-mini spinbox-input" value="1">
     </div>
     
   </div>
