--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,17 +1,24 @@
 <html>
 <head>
 
-    <link type="text/css" rel="stylesheet" href="/static/css/style.css"/>
 
     {% block styles %}
     {% endblock %}
 
     {% block script %}
     {% endblock %}
+  <link type="text/css" rel="stylesheet" href="/static/css/style.css"/>
+
+    <script src="/static/js/jquery-2.0.2.min.js"></script>
+
+
+
 </head>
 	<body>
     {% block top %}
     {% endblock %}
+
+
 
     {% block content %}
     {% endblock %}
