--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -20,6 +20,14 @@
 
         {% for shelter in shelters %}
 
+        var link = '<div class="shelter_popup">' +
+                    '<div class="shelter_name"><a class="shelter_link" href="#{{ shelter.id }}">{{ shelter.shelter_name }}</a></div>' +
+                    '<div class="shelter_count">[{{shelter.people_inside}} / {{shelter.max_capacity}}]</div>' +
+                    '<a href="#" class="i_need_help" id="shelter_need_help_popup-content" onclick='+"$('#shelter_need_help_popup').show();"+'>I need a help</a>' +
+                    '<a href="#" class="i_want_help" id="shelter_want_help_popup-content" onclick='+"$('#shelter_want_help_popup').show();"+'>I want to help</a>' +
+                    '</div>';
+
+
         L.marker([{{ shelter.location_lat }}, {{shelter.location_long}}], {
           icon: L.mapquest.icons.marker({
             primaryColor: '#22407F',
@@ -28,12 +36,11 @@
             size: '{{ shelter.size }}',
             symbol: '{{shelter.symbol }}'
           })
-        }).bindPopup('{{ shelter.shelter_name }}').addTo(map);
+        }).bindPopup(link).addTo(map);
+{#        }).bindPopup().addTo(map);#}
+
 
         {% endfor %}
-
-
-
         {% for ticket in tickets %}
 
         L.marker([{{ ticket.location_lat }}, {{ticket.location_long}}], {
@@ -41,8 +48,8 @@
             primaryColor: '#cd26d6',
             secondaryColor: '#720cd6',
             shadow: true,
-            size: '{{ shelter.size }}',
-            symbol: '{{shelter.symbol }}'
+            size: '{{ ticket.size }}',
+            symbol: {% if ticket.status == 1 %}'C'{% elif ticket.status == 2 %}'U'{% elif ticket.status == 3 %}'N' {% else %}'D'{% endif %}
           })
         }).bindPopup('{{ ticket.type_of_assistance }}').addTo(map);
 
@@ -61,13 +68,28 @@
 
 
 
-
 {% block content %}
-
 
 <div style="height: 100%">
 
+    <div style="display: none;" class="shelterpopup" id="shelter_need_help_popup">
+        <div class="close" onclick="$('#shelter_need_help_popup').hide()">x</div>
+        <div class="content">
+            {% include "blocks/shelter_need_help_popup.html" %}
+        </div>
+    </div>
+
+    <div style="display: none;" class="shelterpopup" id="shelter_want_help_popup">
+        <div class="close" onclick="$('#shelter_want_help_popup').hide()">x</div>
+        <div class="content">
+            {% include "blocks/shelter_want_help_popup.html" %}
+        </div>
+    </div>
+
     <div id="map" class="map"></div>
+
+
+
 
     <div class="bottom-menu" style="overflow: hidden;">
         <div class="container">
