--- a/core/templates/elements/login_facebook_button.html
+++ b/core/templates/elements/login_facebook_button.html
@@ -1,3 +1,3 @@
  <a href="https://graph.facebook.com/oauth/authorize?client_id={{ settings.FACEBOOK_APP_ID }}&redirect_uri={{ settings.FACEBOOK_REDIRECT_URI }}&scope=email,publish_actions,user_about_me,user_birthday,user_friends,user_location&display=popup">
-    Login
+    Login via Facebook
     </a>
