Update register shelter function

--- a/core/templates/wanna_help_1.html
+++ b/core/templates/wanna_help_1.html
@@ -40,6 +40,13 @@
                     <br>\
                     Description:<br>\
                     <input type=\"text\" name=\"description\">\
+                    <br>\
+                    People Inside:<br>\
+                    <input type=\"text\" name=\"inside\">\
+                    <br>\
+                    People coming:<br>\
+                    <input type=\"text\" name=\"incoming\">\
+                    <br>\
                     <input type=\"submit\" value=\"Submit\">\
                     <input type=\"hidden\" name=\"lat\" value=\" "+e.latlng.lat+"\">\
                     <input type=\"hidden\" name=\"long\" value=\" "+e.latlng.lng+"\">\
